# myev

./: Cargo.toml  README.md  build.sh  dev_run.sh  install.sh  key_config.toml  myev  myev.service
.cargo/: config.toml
.github/workflows/: release.yml
myev/: Cargo.toml
myev-installer/: Cargo.toml
myev-installer/src/: main.rs
myev/src/: main.rs
src/: main.rs  old.rs  old2.rs  toml_parser.rs  virtual_device.rs
