[package]
name = "myev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.1", features = ["serde", "tokio"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.12"
# libudev = { version = "*" }
# uinput = "0.1.3"
# nix = "0.28.0"
# evdev-rs = { version = "0.6.1", features = ["serde"] }
# libc = "0.2.153"
